# QwikChat

./: .dockerignore  Cargo.toml  Dockerfile  chat.db  fly.toml
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/auth/: user-auth-form.tsx
frontend/components/chat/: chat-window.tsx  sidebar.tsx
frontend/components/ui/: avater.tsx
frontend/lib/: api.ts  utils.ts
src/: db.rs  main.rs  models.rs  routes.rs  server.rs  session.rs
static/: index.html
